--- a/fitness-and-health-website/about-us.html
+++ b/fitness-and-health-website/about-us.html
@@ -9,7 +9,7 @@
 
     <title>Über uns</title>
 </head>
-<body style = "background-color: #F9F4E6; overflow-x: hidden; font-family: Merriweather, sans-serif">
+<body style = "background-color: #F9F4E6; overflow-x: hidden; font-family: Arial, sans-serif">
 
 <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed contrast" >
     <div class="container-fluid">
