--- a/fitness-and-health-website/nutrition.html
+++ b/fitness-and-health-website/nutrition.html
@@ -110,6 +110,9 @@
             </div>
         </div>
 
+        <table>
+
+        </table>
         <!-- Right Column with Explanation -->
         <div class="col-md-6 col-12" >
                 <div class="explanation-container p-4 rounded" style="background-color: #F6E8D5;">
