added the table for daily calorie intake and calorie spread.

--- a/fitness-and-health-website/nutrition.html
+++ b/fitness-and-health-website/nutrition.html
@@ -10,6 +10,7 @@
     <script src="Calculator.js"></script>
     <script src = "Loader.js"></script>
     <title>Ernährung</title>
+
 </head>
 <body style="background-color: #F9F4E6; overflow: auto; margin: 0; padding: 0;">
 <!-- Sticky Top Bar -->
@@ -99,11 +100,6 @@
                         </select>
                     </div>
 
-                    <div class="mb-3">
-                        <label for="result" class="form-label " style = "font-family: sans-serif">Dein Kalorienbedarf pro Tag</label>
-                        <input type="text" class="form-control" id="result" placeholder="z. B. 1730 Kalorien" readonly style="font-family: sans-serif">
-                    </div>
-
                     <!-- Submit Button -->
                     <button type="button" class="btn btn-custom w-100" onclick="loadTable()" style = "color: black">Absenden</button>
 
@@ -117,7 +113,7 @@
                 <div class="explanation-container p-4 rounded" style="background-color: #F6E8D5;">
                 <h3 class="mb-3" style="color: #6AA84F; font-family: sans-serif">Wie funktioniert es?</h3>
                 <p class="text-muted" style="font-family: sans-serif">
-                    Dieses Formular hilft Ihnen, personalisierte Ernährungspläne zu erstellen:
+                    Dieses Formular hilft Ihnen, personalisierte Ernährungspläne zu erstellen. Nach dem Absenden erstellen wir einen maßgeschneiderten Ernährungsplan, der auf Ihre Bedürfnisse abgestimmt ist. Ihr täglicher Kalorienbedarf und die Nährstoffverteilung werden in einer Tabelle angezeigt.
                 </p>
                 <ul class="list-group list-group-flush mb-3">
                     <li class="list-group-item bg-transparent" style="color: #6AA84F; font-family: sans-serif">1. Geben Sie Ihr Gewicht und Ihre Größe an</li>
