Fixed the loader and some bugs, also expend the usecase diagram

--- a/fitness-and-health-website/nutrition.html
+++ b/fitness-and-health-website/nutrition.html
@@ -129,11 +129,13 @@
 </div>
 
 
+<div id = "writeTable">
+
+</div>
 
 
 
-
-<div class="container my-5" id = "firstTable">
+<div class="container my-5">
     <!-- Diabetes -->
     <div class="row mb-5 gy-4">
         <div class="col-lg-4 col-md-6 col-12">
