--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -61,7 +61,7 @@
     </section>
 
     <!-- Features Section -->
-    <div class="container my-5">
+    <div class="container my-5" style="pointer-events: none">
         <div class="row text-center">
             <div class="col-md-4">
                 <div class="card shadow-sm p-4 icon-card">
