fixed some bugs

--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -57,11 +57,11 @@
     <section class="hero">
         <h1 class="headLine display-4">Willkommen bei Fitness & Health</h1>
         <p class="lead" style="font-weight: lighter">Individuelle Lösungen für ein besseres Wohlbefinden – egal in welchem Alter.</p>
-        <button class="btn btn-primary btn-custom-head btn-lg" style="border: #6AA84F; color: black " onclick="document.location = 'nutrition.html'">Starte jetzt</button>
+        <button class="btn btn-primary btn-custom-head btn-lg " style="border: #6AA84F; color: black ;" onclick="document.location = 'nutrition.html'">Starte jetzt</button>
     </section>
 
     <!-- Features Section -->
-    <div class="container my-5" style="pointer-events: none">
+    <div class="container my-5" >
         <div class="row text-center">
             <div class="col-md-4">
                 <div class="card shadow-sm p-4 icon-card">
