--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -53,7 +53,7 @@
     </div>
 </nav>
 
-<div id="carouselExampleSlidesOnly" class="carousel slide full-width-carousel" data-bs-ride="carousel" style="pointer-events: none; background-color: #F9F4E6 ">
+<div id="carouselExampleSlidesOnly" class="carousel slide full-width-carousel" data-bs-ride="carousel" style=" background-color: #F9F4E6 ">
     <div class="carousel-inner">
         <div class="carousel-item active">
             <div class="image-container">
