made a tiny change in the shop html and css

--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -141,12 +141,14 @@
                         <label for="category" class="form-label " style="color: #6AA84F;">Kategorie</label>
                         <select class="form-select" id="category" required>
                             <option value="" disabled selected>Wähle eine Kategorie</option>
-                            <option value="medizin">Supplemente</option>
-                            <option value="fitness">Fitness</option>
-                            <option value="ernährung">Ernährung</option>
+                            <option value="supplemente">Supplemente</option>
+                            <option value="fitness">Fitnessgeräte</option>
+                            <option value="ernaehrung">Ernährungspläne</option>
                         </select>
                     </div>
-
+                    <div class="invalid-feedback">
+                        Bitte wählen Sie eine Kategorie aus
+                    </div>
                     <!-- Absenden -->
                     <button type="submit" class="btn btn-custom w-100">Absenden</button>
                 </form>
