added again 3 products which should be you know like products for all, where you dont need a specific problem

--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -175,6 +175,111 @@
     </div>
 </div>
 
+<!-- Produktbereich mit Cards und Modals -->
+<div class="container mt-5">
+    <h2 class="text-center mb-4" style="color: #6AA84F;">Unsere Top-Produkte</h2>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+        <!-- Produkt 1 -->
+        <div class="col">
+            <div class="card h-100">
+                <img src="icones/product1.jpg" class="card-img-top" alt="Produkt 1">
+                <div class="card-body">
+                    <h5 class="card-title">Produkt 1</h5>
+                    <p class="card-text">Kurze Beschreibung zu Produkt 1 – ideal für Ihre Gesundheit und Fitness.</p>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#productModal1">
+                        Mehr erfahren
+                    </button>
+                </div>
+            </div>
+        </div>
+        <!-- Produkt 2 -->
+        <div class="col">
+            <div class="card h-100">
+                <img src="icones/product2.jpg" class="card-img-top" alt="Produkt 2">
+                <div class="card-body">
+                    <h5 class="card-title">Produkt 2</h5>
+                    <p class="card-text">Kurze Beschreibung zu Produkt 2 – perfekt zur Unterstützung Ihres Trainings.</p>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#productModal2">
+                        Mehr erfahren
+                    </button>
+                </div>
+            </div>
+        </div>
+        <!-- Produkt 3 -->
+        <div class="col">
+            <div class="card h-100">
+                <img src="icones/product3.jpg" class="card-img-top" alt="Produkt 3">
+                <div class="card-body">
+                    <h5 class="card-title">Produkt 3</h5>
+                    <p class="card-text">Kurze Beschreibung zu Produkt 3 – unterstützt Ihre Ernährung und Ihren Lifestyle.</p>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#productModal3">
+                        Mehr erfahren
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="modal fade" id="productModal1" tabindex="-1" aria-labelledby="productModal1Label" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="productModal1Label">Produkt 1 Details</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Schließen"></button>
+            </div>
+            <div class="modal-body">
+                <p>Hier finden Sie detaillierte Informationen zu Produkt 1, seinen Vorteilen, Inhaltsstoffen und Anwendungshinweisen.</p>
+                <img src="icones/product1.jpg" class="img-fluid" alt="Produkt 1">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Schließen</button>
+                <button type="button" class="btn btn-primary">In den Warenkorb</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="modal fade" id="productModal2" tabindex="-1" aria-labelledby="productModal2Label" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="productModal2Label">Produkt 2 Details</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Schließen"></button>
+            </div>
+            <div class="modal-body">
+                <p>Detaillierte Informationen zu Produkt 2. Erfahren Sie mehr über seine Vorteile und Einsatzmöglichkeiten.</p>
+                <img src="icones/product2.jpg" class="img-fluid" alt="Produkt 2">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Schließen</button>
+                <button type="button" class="btn btn-primary">In den Warenkorb</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="modal fade" id="productModal3" tabindex="-1" aria-labelledby="productModal3Label" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="productModal3Label">Produkt 3 Details</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Schließen"></button>
+            </div>
+            <div class="modal-body">
+                <p>Hier finden Sie alle Details zu Produkt 3, von den Inhaltsstoffen bis zu den Anwendungshinweisen.</p>
+                <img src="icones/product3.jpg" class="img-fluid" alt="Produkt 3">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Schließen</button>
+                <button type="button" class="btn btn-primary">In den Warenkorb</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 <div class="container my-" style = "margin-top: 5%; margin-bottom: 5%">
 
