--- a/fitness-and-health-website/nutrition.html
+++ b/fitness-and-health-website/nutrition.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
     <script src="Calculator.js"></script>
     <script src = "Loader.js"></script>
+    <script src = "nutrition.js"></script>
     <title>Ernährung</title>
 
 </head>
