--- a/fitness-and-health-website/nutrition.html
+++ b/fitness-and-health-website/nutrition.html
@@ -63,47 +63,55 @@
 <div class="container mt-5">
     <div class="row">
         <!-- Left Column with Form -->
-        <div class="col-md-6">
-            <div class="form-container mx-auto" style="max-width: 500px; background-color: #F6E8D5;">
-                <h2 class="text-center" style= "color: #6AA84F; font-family: sans-serif">Ernährungsformular</h2>
-                <form>
-                    <div class="mb-3">
-                        <label for="weight" class="form-label" style="color: #6AA84F; font-family: sans-serif">Gewicht (kg)</label>
-                        <input type="number" class="form-control" id="weight" placeholder="z. B. 70" min="0" required style="font-family: sans-serif">
-                    </div>
+        <div class="form-container mx-auto" style="max-width: 500px; background-color: #F6E8D5;">
+            <h2 class="text-center" style="color: #6AA84F; font-family: sans-serif">Ernährungsformular</h2>
+            <form id="nutritionForm">
+                <div class="mb-3">
+                    <label for="weight" class="form-label" style="color: #6AA84F; font-family: sans-serif">Gewicht (kg)</label>
+                    <input type="number" class="form-control" id="weight" placeholder="z. B. 70" min="0" required style="font-family: sans-serif">
+                    <div class="invalid-feedback">Bitte geben Sie ein gültiges Gewicht ein.</div>
+                </div>
 
-                    <div class="mb-3">
-                        <label for="height" class="form-label" style="color: #6AA84F; font-family: sans-serif">Größe (cm)</label>
-                        <input type="number" class="form-control" id="height" placeholder="z. B. 175" min="0" required style="font-family: sans-serif">
-                    </div>
+                <div class="mb-3">
+                    <label for="height" class="form-label" style="color: #6AA84F; font-family: sans-serif">Größe (cm)</label>
+                    <input type="number" class="form-control" id="height" placeholder="z. B. 175" min="0" required style="font-family: sans-serif">
+                    <div class="invalid-feedback">Bitte geben Sie eine gültige Größe ein.</div>
+                </div>
 
-                    <div class="mb-3">
-                        <label for="height" class="form-label " style="color: #6AA84F; font-family: sans-serif">Alter (in Jahren)</label>
-                        <input type="number" class="form-control" id="age" placeholder="z. B. 20" min="0" required style="font-family: sans-serif">
-                    </div>
+                <div class="mb-3">
+                    <label for="age" class="form-label" style="color: #6AA84F; font-family: sans-serif">Alter (in Jahren)</label>
+                    <input type="number" class="form-control" id="age" placeholder="z. B. 20" min="0" required style="font-family: sans-serif">
+                    <div class="invalid-feedback">Bitte geben Sie ein gültiges Alter ein.</div>
+                </div>
 
-                    <div class="mb-3">
-                        <label for="activity-level" class="form-label " style="color: #6AA84F; font-family: sans-serif">Geschlecht</label>
-                        <select class="form-select" id="gender" required>
-                            <option value="" disabled selected class = "style-for-text-in-options">Wähle dein Geschlecht</option>
-                            <option value="Männlich" class = "style-for-text-in-options">Männlich</option>
-                            <option value="Weiblich" class="style-for-text-in-options">Weiblich</option>
-                        </select>
-                    </div>
+                <div class="mb-3">
+                    <label for="gender" class="form-label" style="color: #6AA84F; font-family: sans-serif">Geschlecht</label>
+                    <select class="form-select" id="gender" required>
+                        <option value="" disabled selected class="style-for-text-in-options">Wähle dein Geschlecht</option>
+                        <option value="Männlich" class="style-for-text-in-options">Männlich</option>
+                        <option value="Weiblich" class="style-for-text-in-options">Weiblich</option>
+                    </select>
+                    <div class="invalid-feedback">Bitte wählen Sie ein Geschlecht aus.</div>
+                </div>
 
-                    <div class="mb-3">
-                        <label for="activity-level" class="form-label" style="color: #6AA84F;">Aktivitätslevel</label>
-                        <select class="form-select" id="activity-level" required>
-                            <option value="" disabled selected class = "style-for-text-in-options" >Wähle dein Aktivitätslevel</option>
-                            <option value="low" class = "style-for-text-in-options">Niedrig</option>
-                            <option value="moderate" class = "style-for-text-in-options">Mittel</option>
-                            <option value="high" class = "style-for-text-in-options">Hoch</option>
-                        </select>
-                    </div>
-                    <button type="button" class="btn btn-custom w-100" onclick="loadTable()" style = "color: black">Absenden</button>
+                <div class="mb-3">
+                    <label for="activity-level" class="form-label" style="color: #6AA84F;">Aktivitätslevel</label>
+                    <select class="form-select" id="activity-level" required>
+                        <option value="" disabled selected class="style-for-text-in-options">Wähle dein Aktivitätslevel</option>
+                        <option value="low" class="style-for-text-in-options">Niedrig</option>
+                        <option value="moderate" class="style-for-text-in-options">Mittel</option>
+                        <option value="high" class="style-for-text-in-options">Hoch</option>
+                    </select>
+                    <div class="invalid-feedback">Bitte wählen Sie ein Aktivitätslevel aus.</div>
+                </div>
 
-                </form>
-            </div>
+                <div class="mb-3">
+                    <label for="additional-info" class="form-label" style="color: #6AA84F; font-family: sans-serif">Zusätzliche Informationen</label>
+                    <textarea class="form-control" id="additional-info" rows="3" placeholder="z. B. Allergien, Unverträglichkeiten oder spezielle Ernährungsbedürfnisse" style="font-family: sans-serif"></textarea>
+                </div>
+
+                <button type="button" class="btn btn-custom w-100" onclick="loadTable()" style="color: black">Absenden</button>
+            </form>
         </div>
 
 
