fixed the dark tables on disabled

--- a/fitness-and-health-website/trainings-plan-disabled.html
+++ b/fitness-and-health-website/trainings-plan-disabled.html
@@ -59,8 +59,8 @@
 <!-- Trainingsplan Table -->
 <div class="container my-5">
   <div class="table-responsive">
-    <table class="table table-dark table-striped m-0">
-      <thead>
+    <table class="table table-striped m-0">
+    <thead>
       <tr>
         <th style="border-top-left-radius: 10px">Tag</th>
         <th>Gelenkfreundliches Training</th>
