table bugs fixed on old

--- a/fitness-and-health-website/trainings-plan-old.html
+++ b/fitness-and-health-website/trainings-plan-old.html
@@ -58,8 +58,8 @@
 <!-- Trainingsplan für Stuhlübungen, Mobilitätstraining und Individuelle Anpassungen -->
 <div class="container my-5">
     <div class="table-responsive">
-        <table class="table table-dark table-striped m-0">
-            <thead>
+        <table class="table table-striped m-0">
+        <thead>
             <tr>
                 <th style="border-top-left-radius: 10px">Tag</th>
                 <th>Stuhlübungen</th>
