--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -4,19 +4,17 @@
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="stylesheet.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <link href="stylesheet.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
 
     <title>FitnessAndHealth</title>
 </head>
 <body style="background-color: #F9F4E6">
 
-<nav class="navbar navbar-expand-lg navbar-dark navbar-fixed contrast" >
+<nav class="navbar navbar-expand-lg navbar-dark navbar-fixed contrast">
     <div class="container-fluid">
-
         <img src="icones/logo-green-no-text.png" alt="Home" width="50" height="50">
-
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -28,7 +26,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link textInNavBar"  href="shop.html">
+                    <a class="nav-link textInNavBar" href="shop.html">
                         <img src="icones/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20"> Produkte
                     </a>
                 </li>
@@ -44,7 +42,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="about-us.html">
-                        <img src="icones/bxs-group.svg"  class="changeColor" alt="Über uns" width="20" height="20"> Über uns
+                        <img src="icones/bxs-group.svg" class="changeColor" alt="Über uns" width="20" height="20"> Über uns
                     </a>
                 </li>
             </ul>
@@ -52,96 +50,76 @@
     </div>
 </nav>
 
-<div class="MainPage" style="background-color: #F9F4E6">
-     <section class="hero">
-        <h1 class="headLine display-4">Willkommen bei Fitness & Health</h1>
-        <p class="lead" style="font-weight: lighter">Individuelle Lösungen für ein besseres Wohlbefinden – egal in welchem Alter.</p>
-        <button class="btn btn-primary btn-custom-head btn-lg " style="border: #6AA84F; color: black ;" onclick="document.location = 'nutrition.html'">Starte jetzt</button>
-    </section>
-
-    <div class="container my-5" >
-        <div class="row text-center">
-            <div class="col-md-4">
-                <div class="card shadow-sm p-4 icon-card">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-book mx-auto d-block mb-3" viewBox="0 0 16 16">
-                        <path d="M1 2.828c.885-.37 2.154-.769 3.388-.893 1.33-.134 2.458.063 3.112.752v9.746c-.935-.53-2.12-.603-3.213-.493-1.18.12-2.37.461-3.287.811zm7.5-.141c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783"/>
-                    </svg>
-                    <h5 class="card-title" style="color: #6AA84F">Individuelle Pläne</h5>
-                    <p class="card-text">Erhalte Trainings- und Ernährungspläne, die genau auf deine Bedürfnisse abgestimmt sind.</p>
+<div class="hero-with-carousel">
+    <!-- Karussell im Hintergrund -->
+    <div class="carousel-background">
+        <div id="mainCarousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="icones/leo-pitcture.jpg" class="d-block w-100" alt="Individuelles Training">
                 </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card shadow-sm p-4 icon-card">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-question-lg mx-auto d-block mb-3" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M4.475 5.458c-.284 0-.514-.237-.47-.517C4.28 3.24 5.576 2 7.825 2c2.25 0 3.767 1.36 3.767 3.215 0 1.344-.665 2.288-1.79 2.973-1.1.659-1.414 1.118-1.414 2.01v.03a.5.5 0 0 1-.5.5h-.77a.5.5 0 0 1-.5-.495l-.003-.2c-.043-1.221.477-2.001 1.645-2.712 1.03-.632 1.397-1.135 1.397-2.028 0-.979-.758-1.698-1.926-1.698-1.009 0-1.71.529-1.938 1.402-.066.254-.278.461-.54.461h-.777ZM7.496 14c.622 0 1.095-.474 1.095-1.09 0-.618-.473-1.092-1.095-1.092-.606 0-1.087.474-1.087 1.091S6.89 14 7.496 14"/>
-                    </svg>
-                    <h5 class="card-title" style="color: #6AA84F">Einfacher Support</h5>
-                    <p class="card-text">Unser Team unterstützt dich bei jedem Schritt auf deinem Weg.</p>
+                <div class="carousel-item">
+                    <img src="icones/healthy-food.jpg" class="d-block w-100" alt="Gesunde Ernährung">
                 </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card shadow-sm p-4 icon-card">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list-check mx-auto d-block mb-3" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M5 11.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5M3.854 2.146a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708L2 3.293l1.146-1.147a.5.5 0 0 1 .708 0m0 4a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708L2 7.293l1.146-1.147a.5.5 0 0 1 .708 0m0 4a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 0 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0"/>
-                    </svg>
-                    <h5 class="card-title" style="color: #6AA84F">Nachhaltige Ergebnisse</h5>
-                    <p class="card-text">Verbessere deine Gesundheit langfristig und spüre die Veränderung.</p>
+                <div class="carousel-item">
+                    <img src="icones/man-trained.jpg" class="d-block w-100" alt="Persönlicher Support">
                 </div>
             </div>
         </div>
     </div>
-    <div class="container my-5">
-        <h2 class="text-center mb-4">Einblicke in unser Angebot</h2>
-        <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="icones/leo-pitcture.jpg" class="d-block w-100 rounded" alt="Bild 1">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Individuelles Training</h5>
-                        <p>Passend für jedes Fitnesslevel.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="icones/healthy-food.jpg" class="d-block w-100 rounded" alt="Bild 2">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Gesunde Ernährung</h5>
-                        <p>Lecker und einfach umzusetzen.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="icones/man-trained.jpg" class="d-block w-100 rounded" alt="Bild 3">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Persönlicher Support</h5>
-                        <p>Immer für dich da, wenn du Unterstützung brauchst.</p>
-                    </div>
-                </div>
+
+    <!-- Hero-Inhalt über dem Karussell -->
+    <div class="hero-content">
+        <h1 class="headLine display-4">Willkommen bei Fitness & Health</h1>
+        <p class="lead" style="font-weight: lighter; max-width: 600px;">Individuelle Lösungen für ein besseres Wohlbefinden – egal in welchem Alter.</p>
+        <button class="btn btn-primary btn-custom-head btn-lg" onclick="document.location = 'nutrition.html'">Starte jetzt</button>
+    </div>
+</div>
+
+<div class="container my-5">
+    <div class="row text-center">
+        <div class="col-md-4 mb-4">
+            <div class="card shadow-sm p-4 icon-card h-100">
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#6AA84F" class="bi bi-book mx-auto d-block mb-3" viewBox="0 0 16 16">
+                    <path d="M1 2.828c.885-.37 2.154-.769 3.388-.893 1.33-.134 2.458.063 3.112.752v9.746c-.935-.53-2.12-.603-3.213-.493-1.18.12-2.37.461-3.287.811zm7.5-.141c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783"/>
+                </svg>
+                <h5 class="card-title" style="color: #6AA84F">Individuelle Pläne</h5>
+                <p class="card-text">Erhalte Trainings- und Ernährungspläne, die genau auf deine Bedürfnisse abgestimmt sind.</p>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Zurück</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Weiter</span>
-            </button>
+        </div>
+        <div class="col-md-4 mb-4">
+            <div class="card shadow-sm p-4 icon-card h-100">
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#6AA84F" class="bi bi-question-lg mx-auto d-block mb-3" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M4.475 5.458c-.284 0-.514-.237-.47-.517C4.28 3.24 5.576 2 7.825 2c2.25 0 3.767 1.36 3.767 3.215 0 1.344-.665 2.288-1.79 2.973-1.1.659-1.414 1.118-1.414 2.01v.03a.5.5 0 0 1-.5.5h-.77a.5.5 0 0 1-.5-.495l-.003-.2c-.043-1.221.477-2.001 1.645-2.712 1.03-.632 1.397-1.135 1.397-2.028 0-.979-.758-1.698-1.926-1.698-1.009 0-1.71.529-1.938 1.402-.066.254-.278.461-.54.461h-.777ZM7.496 14c.622 0 1.095-.474 1.095-1.09 0-.618-.473-1.092-1.095-1.092-.606 0-1.087.474-1.087 1.091S6.89 14 7.496 14"/>
+                </svg>
+                <h5 class="card-title" style="color: #6AA84F">Einfacher Support</h5>
+                <p class="card-text">Unser Team unterstützt dich bei jedem Schritt auf deinem Weg.</p>
+            </div>
+        </div>
+        <div class="col-md-4 mb-4">
+            <div class="card shadow-sm p-4 icon-card h-100">
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#6AA84F" class="bi bi-list-check mx-auto d-block mb-3" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M5 11.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5M3.854 2.146a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708L2 3.293l1.146-1.147a.5.5 0 0 1 .708 0m0 4a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708L2 7.293l1.146-1.147a.5.5 0 0 1 .708 0m0 4a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 0 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0"/>
+                </svg>
+                <h5 class="card-title" style="color: #6AA84F">Nachhaltige Ergebnisse</h5>
+                <p class="card-text">Verbessere deine Gesundheit langfristig und spüre die Veränderung.</p>
+            </div>
         </div>
     </div>
 </div>
 
-<div class="container my-" style = "margin-top: 5%; margin-bottom: 5%">
-
-    <footer class="text-center text-lg-start border mt-xl-5 pt-4 contrast" style=" box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
+<div class="container my-5" style="margin-top: 5%; margin-bottom: 5%">
+    <footer class="text-center text-lg-start border mt-xl-5 pt-4 contrast" style="box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
         <div class="container p-4">
             <div class="row">
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter" style="color: #F6E8D5;">Unsere Welt</h5>
-
+                    <h5 class="text-uppercase mb-4 text-in-fotter">Unsere Welt</h5>
                     <ul class="list-unstyled mb-4">
                         <li>
-                            <a href="shop.html" class="hover-effects" >Produkte</a>
+                            <a href="shop.html" class="hover-effects">Produkte</a>
                         </li>
                         <li>
-                            <a href="trainings-plan.html" class="hover-effects" >Trainingspläne</a>
+                            <a href="trainings-plan.html" class="hover-effects">Trainingspläne</a>
                         </li>
                         <li>
                             <a href="nutrition.html" class="hover-effects">Ernährungspläne</a>
@@ -151,35 +129,26 @@
                         </li>
                     </ul>
                 </div>
-
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
                     <h5 class="text-uppercase mb-4 text-in-fotter">Karriere</h5>
-
                     <ul class="list-unstyled">
                         <li>
                             <a href="#!" class="hover-effects">Jobs</a>
                         </li>
                     </ul>
                 </div>
-
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
                     <h5 class="text-uppercase mb-4 text-in-fotter">Kontaktiere uns</h5>
-
                     <div class="form-outline form-white mb-4">
-                        <a href = "mailto:brunnerjan1102@gmail.com" class = "styleForEmailInMain hover-effects">Klicke hier</a>
-
+                        <a href="mailto:brunnerjan1102@gmail.com" class="styleForEmailInMain hover-effects">Klicke hier</a>
                     </div>
-
                 </div>
-                <div class = "col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <img src="icones/logo-green-no-text.png" class = "bg-image hover-overlay ripple shadow-1-strong rounded" style = "width: 50%">
+                <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                    <img src="icones/logo-green-no-text.png" class="bg-image hover-overlay ripple shadow-1-strong rounded" style="width: 50%">
                 </div>
             </div>
-
         </div>
-
     </footer>
-
 </div>
 
 </body>
