--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -22,7 +22,8 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="index.html">
-                        <img src="icones/bxs-home.svg" class="changeColor" alt="Shop" width="20" height="20"> Home
+                        <img src="icones/bxs-home.svg" class="changeColor" alt="Shop" width="20" height="20">
+                        <span data-translate="true">Home</span>
                     </a>
                 </li>
                 <li class="nav-item">
@@ -44,6 +45,15 @@
                     <a class="nav-link textInNavBar" href="about-us.html">
                         <img src="icones/bxs-group.svg" class="changeColor" alt="Über uns" width="20" height="20"> Über uns
                     </a>
+                </li>
+                <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle textInNavBar" href="#" id="navbarLanguageDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Sprache
+                </a>
+                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarLanguageDropdown">
+                    <li><a class="dropdown-item" href="#" onclick="setLanguage('de')">Deutsch</a></li>
+                    <li><a class="dropdown-item" href="#" onclick="setLanguage('en')">English</a></li>
+                </ul>
                 </li>
             </ul>
         </div>
@@ -150,6 +160,6 @@
         </div>
     </footer>
 </div>
-
+<script src="translate.js"></script>
 </body>
 </html>
